--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,11 @@
   <title>{% PAGE_TITLE %} | {% site_title %}</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="stylesheet" href="./mobile.css" media="screen and (max-width: 600px)">
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/mobile.css" media="screen and (max-width: 600px)">
+  <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.9.0/styles/kimbie-light.min.css">
+  <script src="https://unpkg.com/@highlightjs/cdn-assets@11.9.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 </head>
 
 <body>
@@ -14,7 +17,9 @@
     <a href="/">home</a> |
     <a href="/about.html">about</a> |
     <a href="/contact.html">contact</a> |
-    <a href="/projects.html">projects</a>
+    <a href="/projects.html">projects</a> |
+    <a href="/help.html">help</a> |
+    <i>you are on: <a href="/{% site_yao %}.html">{% site_yao %}</a></i>
   </div>
   <h1 class="main-header">{% site_title %}</h1>
   <div id="main-copy">
