--- a/templates/project.html
+++ b/templates/project.html
@@ -18,7 +18,7 @@
         <a href="/help.html">help</a> |
         <i>you are on: <a href="/{% site_yao %}.html">{% site_yao %}</a></i>
     </div>
-    <h1 class="main-header">{% site_title %}</h1>
+    <h1 class="main-header">{% site_title %}</h1> <i class="main-tagline">{% site_tagline %}</i>
     <div id="main-copy">
         <div id="media">
             <img
