--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <a href="/contact.html">contact</a> |
     <a href="/projects.html">projects</a> |
     <a href="/help.html">help</a> |
-    <i>you are on: <a href="/{% site_yao %}.html">{% site_yao %}</a></i>
+    <i>you are on: <a href="/{% site_yao %}">{% site_yao %}</a></i>
   </div>
   <h1 class="main-header">{% site_title %}</h1> <i class="main-tagline">{% site_tagline %}</i>
   <div id="main-copy">
