--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
     <hr />
   </div>
   <code><i>built using <b>malinowy</b></i></code>
+  <img src="https://files.catbox.moe/0e1gf1.gif" class="poland">
 </body>
 
 </html>
